--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,29 +1,28 @@
 name: Generate Snake
 
 on:
-  schedule: # every 24 hours
-    - cron: "0 0 * * *"
-  workflow_dispatch: # allow manual runs
+  workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * *" # runs every day at midnight UTC
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Needed to push changes
 
     steps:
-      # Check out the repository
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      # Generate the snake
-      - name: Generate GitHub Contribution Snake
+      - name: Generate Snake
         uses: Platane/snk@v3
         with:
-          github_user_name: ummadivishnuvardhan
+          github_user_name: ${{ github.repository_owner }}
           outputs: dist/github-contribution-grid-snake.svg
 
-      # Push the snake animation to the output branch
-      - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - name: Push snake.svg to output branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
